--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,30 +27,7 @@
 		</div>
 	</nav>
 
-
-	<div class="container">
-		<h1>Form</h1>
-		<form action="/create" method="post">
-			<div class="form-group">
-				<label for="userId">userId</label> <input type="text"
-					class="form-control" name="userId" placeholder="userId">
-			</div>
-			<div class="form-group">
-				<label for="password">Password</label> <input type="password"
-					class="form-control" name="password" placeholder="password">
-			</div>
-			<div class="form-group">
-				<label for="name">username</label> <input type="text"
-					class="form-control" name="name" placeholder="name">
-			</div>
-			<div class="form-group">
-				<label for="email">Email address</label> <input type="email"
-					class="form-control" name="email" placeholder="email">
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
-	</div>
-
+	<h1>회원가입 Template</h1>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
