--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -35,9 +35,7 @@
 		</div>
 	</div>
 
-	<!-- script references -->
-	<script src="../js/jquery-2.2.0.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/scripts.js"></script>
+	<!-- Footer Include -->
+	{{> /include/footer}}
 </body>
 </html>
