--- a/src/main/resources/templates/user/updateform.html
+++ b/src/main/resources/templates/user/updateform.html
@@ -13,11 +13,11 @@
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default content-main">
 				<form name="question" method="post" action="/users/{{user.id}}">
-					<!-- <input type="hidden" name="id" value="{{user.id}}"> -->
+					<!-- <input type="hidden" name="id" value="{{user.id}}"/> -->
 					<!-- html은 get과 post방식만 지원하기 때문에 put, patch등을 이용하려면 다른 방법이 필요. -->
 					<!-- 개발자들의 약속! -->
-					<input type="hidden" name="_method" value="put">
-					
+					<input type="hidden" name="_method" value="put" />
+
 					<div class="form-group">
 						<label for="userId">사용자 아이디</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID"
@@ -44,9 +44,7 @@
 		</div>
 	</div>
 
-	<!-- script references -->
-	<script src="/js/jquery-2.2.0.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/scripts.js"></script>
+	<!-- Footer Include -->
+	{{> /include/footer}}
 </body>
 </html>
